Fix linting errors that do not change dist output

--- a/src/scss/00_functions/_icon.scss
+++ b/src/scss/00_functions/_icon.scss
@@ -1,6 +1,7 @@
-@function icon_url($icon){
-  @if ($icon == null) {
+@function icon_url($icon) {
+  @if not $icon {
     @return null;
   }
+
   @return var(--hel-icon--#{$icon});
 }
