--- a/src/scss/06_components/layout/_maintenance-page.scss
+++ b/src/scss/06_components/layout/_maintenance-page.scss
@@ -37,8 +37,9 @@
 
   &::after {
     @include pseudo-icon('arrow-right');
-    @include hover-link-arrow-transition();
+    @include hover-link-arrow-transition;
   }
+
   &[data-is-external]::after {
     content: none;
   }
@@ -48,6 +49,7 @@
 
     &::after {
       transform: translateX($spacing-quarter);
+
       @media (prefers-reduced-motion) {
         transform: none;
       }
