--- a/src/scss/06_components/paragraphs/_chart.scss
+++ b/src/scss/06_components/paragraphs/_chart.scss
@@ -1,8 +1,8 @@
-$_chart-aspect-ratio: 16/9;
+$-chart-aspect-ratio: 16 / 9;
 
 .chart__container {
   height: 0;
-  padding-bottom: aspect-ratio-padding($_chart-aspect-ratio);
+  padding-bottom: aspect-ratio-padding($-chart-aspect-ratio);
   position: relative;
   width: 100%;
 
