--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,9 +1,9 @@
-//
-// @file
 // This file includes all imports
-//
+
+// TODO: hds content should be cleaned
 @import 'hds';
 
+// Breakpoint helpers
 @import '~breakpoint-sass';
 
 // This folder structure is based loosely on ITCSS
