--- a/src/scss/00_functions/_unit.scss
+++ b/src/scss/00_functions/_unit.scss
@@ -1,6 +1,6 @@
 // Use Dart Sass math module to perform calculations.
 // https://sass-lang.com/documentation/modules/math
-@use "sass:math";
+@use 'sass:math';
 
 // Function nounit strips any unit from variable.
 @function nounit($number) {
@@ -13,5 +13,6 @@
 /// @param {Number} value - value in px to be converted to rem units.
 /// @param {Number} base-size - font-size of html element in pixels; defaults to $rem-base-size.
 @function remify($value, $base-size: $base-font-size) {
+  // stylelint-disable-next-line length-zero-no-unit
   @return $value / $base-size + 0rem;
 }
