--- a/src/scss/01_variables/_constraint_variables.scss
+++ b/src/scss/01_variables/_constraint_variables.scss
@@ -1,16 +1,14 @@
-//
-// @file
+// stylelint-disable scss/dollar-variable-empty-line-before
 // This file includes constraints used in the theme.
-//
 
 // Container width variables from HDS.
-@import '~hds-design-tokens/lib/breakpoint/container-width.scss';
+@import '~hds-design-tokens/lib/breakpoint/container-width'; // Notice, SCSS format
 
 $gutter: 16px;
 
 $spacing: $gutter; // 16px
-$spacing-quarter: $spacing * .25; // 4px
-$spacing-half: $spacing * .5; // 8px
+$spacing-quarter: $spacing * 0.25; // 4px
+$spacing-half: $spacing * 0.5; // 8px
 $spacing-and-half: $spacing * 1.5; // 24px
 $spacing-double: $spacing * 2; // 32px
 $spacing-triple: $spacing * 3; // 48px
