--- a/src/scss/01_variables/_typography_variables.scss
+++ b/src/scss/01_variables/_typography_variables.scss
@@ -1,4 +1,5 @@
 // Base font family and size.
+// stylelint-disable-next-line value-keyword-case
 $base-font-family: HelsinkiGrotesk, Arial, sans-serif;
 $base-font-size: 16px; // We have to assume that this is the default size in browsers.
 $base-line-height: 1.5;
@@ -10,184 +11,186 @@ $font-weight-bold: 700;
 $font-weight-black: 800;
 
 // Add design font tokens to $config
-$config: deep-map-merge($config, (
-  font: (
-    h1: (
-      font-size: remify(40px), // was 52px
-      font-weight: $font-weight-regular, // was regular
-      line-height: 40/40,
-      breakpoint_l: (
-        font-size: remify(64px), // was 72px
-        font-weight: $font-weight-regular,
-        line-height: 64/64, // was 1
-      )
-    ),
-    h2: (
-      font-size: remify(32px), // was 36px
-      font-weight: $font-weight-regular, // was regular
-      line-height: 32/32,
-      breakpoint_l: (
-        font-size: remify(48px), // was 52px
-        font-weight: $font-weight-regular,
-        line-height: 48/48,
-      )
-    ),
-    h3: (
-      font-size: remify(24px), // was 24px
-      font-weight: $font-weight-medium, // was regular
-      line-height: 32/24,
-      breakpoint_l: (
+$config: deep-map-merge(
+  $config,
+  (
+    font: (
+      h1: (
+        font-size: remify(40px), // was 52px
+        font-weight: $font-weight-regular, // was regular
+        line-height: 40 / 40,
+        breakpoint_l: (
+          font-size: remify(64px), // was 72px
+          font-weight: $font-weight-regular,
+          line-height: 64 / 64, // was 1
+        )
+      ),
+      h2: (
         font-size: remify(32px), // was 36px
-        font-weight: $font-weight-regular,
-        line-height: 32/32,
-      )
-    ),
-    h4: (
-      font-size: remify(20px), // was 20px
-      font-weight: $font-weight-medium, // was medium
-      line-height: 26/20,
-      breakpoint_l: (
+        font-weight: $font-weight-regular, // was regular
+        line-height: 32 / 32,
+        breakpoint_l: (
+          font-size: remify(48px), // was 52px
+          font-weight: $font-weight-regular,
+          line-height: 48 / 48,
+        )
+      ),
+      h3: (
         font-size: remify(24px), // was 24px
-        font-weight: $font-weight-medium,
-        line-height: 28/24,
-      )
-    ),
-    h5: (
-      font-size: remify(18px), // was 18px
-      font-weight: $font-weight-medium, // was medium
-      line-height: 22/18,
-      breakpoint_l: (
-        font-size: remify(20px), // was 20px
-        font-weight: $font-weight-bold, // was regular
-        line-height: 30/20,
-      )
-    ),
-    h6: (
-      font-size: remify(16px), // was 16px
-      font-weight: $font-weight-bold, // was medium
-      line-height: 24/16,
-      breakpoint_l: (
-        font-size: remify(18px), // was 16px
-        font-weight: $font-weight-bold, // was bold
-        line-height: 28/18,
-      )
-    ),
-    lead: (
-      font-size: remify(20px),
-      font-weight: $font-weight-regular,
-      line-height: 30/20,
-      breakpoint_l: (
-        font-size: remify(22px),
-        font-weight: $font-weight-regular,
-        line-height: 33/22,
-      )
-    ),
-    body: (
-      font-size: remify(18px),
-      font-weight: $font-weight-regular,
-      line-height: 28/18
-    ),
-    small: (
-      font-size: remify(16px),
-      font-weight: $font-weight-regular,
-      line-height: 24/16
-    ),
-    button: (
-      font-size: remify(16px),
-      font-weight: $font-weight-medium,
-      line-height: 24/16
-    ),
-    special: (
-      card_title: (
-        font-size: remify(26px),
-        font-weight: $font-weight-medium,
-        line-height: 32/26,
-        breakpoint_l: (
-          font-size: remify(34px),
-          font-weight: $font-weight-medium,
-          line-height: 42/34,
-        )
-      ),
-      helper_text: (
-        font-size: remify(14px),
-        font-weight: $font-weight-medium,
-        line-height: 21/14,
-      ),
-      large_link: (
-        font-size: remify(20px),
-        font-weight: $font-weight-medium,
-        line-height: 30/20,
-      ),
-      quote: (
-        font-size: remify(24px),
         font-weight: $font-weight-medium, // was regular
-        line-height: 36/24,
+        line-height: 32 / 24,
         breakpoint_l: (
-          font-size: remify(32px),
+          font-size: remify(32px), // was 36px
           font-weight: $font-weight-regular,
-          line-height: 48/32,
+          line-height: 32 / 32,
         )
       ),
-      breadcrumb: (
-        parent: (
-          font-size: remify(18px),
+      h4: (
+        font-size: remify(20px), // was 20px
+        font-weight: $font-weight-medium, // was medium
+        line-height: 26 / 20,
+        breakpoint_l: (
+          font-size: remify(24px), // was 24px
+          font-weight: $font-weight-medium,
+          line-height: 28 / 24,
+        )
+      ),
+      h5: (
+        font-size: remify(18px), // was 18px
+        font-weight: $font-weight-medium, // was medium
+        line-height: 22 / 18,
+        breakpoint_l: (
+          font-size: remify(20px), // was 20px
+          font-weight: $font-weight-bold, // was regular
+          line-height: 30 / 20,
+        )
+      ),
+      h6: (
+        font-size: remify(16px), // was 16px
+        font-weight: $font-weight-bold, // was medium
+        line-height: 24 / 16,
+        breakpoint_l: (
+          font-size: remify(18px), // was 16px
+          font-weight: $font-weight-bold, // was bold
+          line-height: 28 / 18,
+        )
+      ),
+      lead: (
+        font-size: remify(20px),
+        font-weight: $font-weight-regular,
+        line-height: 30 / 20,
+        breakpoint_l: (
+          font-size: remify(22px),
           font-weight: $font-weight-regular,
-          line-height: 28/18,
-          breakpoint_m: (
+          line-height: 33 / 22,
+        )
+      ),
+      body: (
+        font-size: remify(18px),
+        font-weight: $font-weight-regular,
+        line-height: 28 / 18
+      ),
+      small: (
+        font-size: remify(16px),
+        font-weight: $font-weight-regular,
+        line-height: 24 / 16
+      ),
+      button: (
+        font-size: remify(16px),
+        font-weight: $font-weight-medium,
+        line-height: 24 / 16
+      ),
+      special: (
+        card_title: (
+          font-size: remify(26px),
+          font-weight: $font-weight-medium,
+          line-height: 32 / 26,
+          breakpoint_l: (
+            font-size: remify(34px),
+            font-weight: $font-weight-medium,
+            line-height: 42 / 34,
+          )
+        ),
+        helper_text: (
+          font-size: remify(14px),
+          font-weight: $font-weight-medium,
+          line-height: 21 / 14,
+        ),
+        large_link: (
+          font-size: remify(20px),
+          font-weight: $font-weight-medium,
+          line-height: 30 / 20,
+        ),
+        quote: (
+          font-size: remify(24px),
+          font-weight: $font-weight-medium, // was regular
+          line-height: 36 / 24,
+          breakpoint_l: (
+            font-size: remify(32px),
+            font-weight: $font-weight-regular,
+            line-height: 48 / 32,
+          )
+        ),
+        breadcrumb: (
+          parent: (
+            font-size: remify(18px),
+            font-weight: $font-weight-regular,
+            line-height: 28 / 18,
+            breakpoint_m: (
+              font-size: remify(14px),
+              font-weight: $font-weight-regular,
+              line-height: 21 / 14,
+            )
+          ),
+          current: (
+            font-size: remify(14px),
+            font-weight: $font-weight-bold,
+            line-height: 21 / 14,
+          )
+        ),
+        navigation: (
+          site_name: (
+            font-size: remify(16px),
+            font-weight: $font-weight-regular,
+            line-height: 24 / 16,
+            breakpoint_m: (
+              font-size: remify(20px),
+              font-weight: $font-weight-regular,
+              line-height: 30 / 20,
+            )
+          ),
+          icon_label: (
             font-size: remify(14px),
             font-weight: $font-weight-regular,
-            line-height: 21/14,
-          )
-        ),
-        current: (
-          font-size: remify(14px),
-          font-weight: $font-weight-bold,
-          line-height: 21/14,
-        )
-      ),
-      navigation: (
-        site_name: (
-          font-size: remify(16px),
-          font-weight: $font-weight-regular,
-          line-height: 24/16,
-          breakpoint_m: (
+            line-height: 14 / 14,
+          ),
+          main_nav: (
+            font-size: remify(18px),
+            font-weight: $font-weight-regular,
+            line-height: 24 / 18,
+          ),
+          sub_nav: (
+            font-size: remify(16px),
+            font-weight: $font-weight-regular,
+            line-height: 20 / 16,
+          ),
+          header_top: (
+            font-size: remify(14px),
+            font-weight: $font-weight-regular,
+            line-height: 20 / 14,
+          ),
+          mobile_nav: (
             font-size: remify(20px),
             font-weight: $font-weight-regular,
-            line-height: 30/20,
-          )
-        ),
-        icon_label: (
-          font-size: remify(14px),
-          font-weight: $font-weight-regular,
-          line-height: 14/14,
-        ),
-        main_nav: (
-          font-size: remify(18px),
-          font-weight: $font-weight-regular,
-          line-height: 24/18,
-        ),
-        sub_nav: (
-          font-size: remify(16px),
-          font-weight: $font-weight-regular,
-          line-height: 20/16,
-        ),
-        header_top: (
-          font-size: remify(14px),
-          font-weight: $font-weight-regular,
-          line-height: 20/14,
-        ),
-        mobile_nav: (
-          font-size: remify(20px),
-          font-weight: $font-weight-regular,
-          line-height: 30/20,
-        ),
-        mobile_subnav: (
-          font-size: remify(16px),
-          font-weight: $font-weight-regular,
-          line-height: 24/16,
-        ),
+            line-height: 30 / 20,
+          ),
+          mobile_subnav: (
+            font-size: remify(16px),
+            font-weight: $font-weight-regular,
+            line-height: 24 / 16,
+          ),
+        )
       )
     )
   )
-));
-
+);
