--- a/src/scss/02_mixins/_mixins.scss
+++ b/src/scss/02_mixins/_mixins.scss
@@ -1,15 +1,15 @@
 // Use Dart Sass math module to perform calculations.
 // https://sass-lang.com/documentation/modules/math
-@use "sass:math";
+@use 'sass:math';
 
 ////
 // To give different styles depending on how many items a wrapper has you can use this mixing to assign the styles
 // to correct element. For example:
-//
+
 // If the wrapper has 1, 2 or 3 items make the items 30% wide, otherwise they should be 20% wide:
 // .wrapper .item {
 //   width: 20%;
-//
+
 //   @include content_count(1, 2, 3) {
 //     width: 30%;
 //   }
@@ -33,7 +33,7 @@
 // @include pseudo-icon-replace('email');
 ////
 @mixin pseudo-icon-replace( $icon ) {
-  mask-image: icon_url( $icon );
+  mask-image: icon_url($icon);
 }
 
 ////
@@ -47,7 +47,7 @@
   content: '';
   display: $display;
   height: $size;
-  mask-image: icon_url( $icon );
+  mask-image: icon_url($icon);
   mask-position: center;
   mask-repeat: no-repeat;
   mask-size: #{$size} #{$size};
@@ -69,18 +69,19 @@
   white-space: nowrap;
 }
 
-//TODO: replace with native flex gap once enough users have moved to > ios 14.4
+// TODO: replace with native flex gap once enough users have moved to > ios 14.4
 @mixin flex-gap($gap) {
   margin-left: -$gap * 0.5;
   margin-right: -$gap * 0.5;
+
   & > * {
-    margin-left:  $gap * 0.5;
-    margin-right:  $gap * 0.5;
+    margin-left: $gap * 0.5;
+    margin-right: $gap * 0.5;
   }
 }
 
 // This sets smart defaults for image element, but allows overriding each property where needed
-@mixin image-defaults($display: block, $height: auto, $max-width: 100%, $overflow: hidden, $width: null){
+@mixin image-defaults($display: block, $height: auto, $max-width: 100%, $overflow: hidden, $width: null) {
   display: $display; // The default 'block' will fix inline images having extra space below them
   height: $height; // The default 'auto' will allow image original aspect ratio to set image space while loading and after
   max-width: $max-width; // The default '100%' will limit image to parent width
@@ -88,6 +89,6 @@
   width: $width; // The default 'null' will disable this, but allow overriding it
 }
 
-@mixin loading-image-background(){
+@mixin loading-image-background() {
   box-shadow: inset 0 0 0 1px $color-black-10;
 }
