--- a/src/scss/02_mixins/_typography_mixins.scss
+++ b/src/scss/02_mixins/_typography_mixins.scss
@@ -1,29 +1,30 @@
 // Renders font styles based on design tokens
-@mixin font($style){
-
+@mixin font($style) {
   // Show debug information in browser inspector tools when run with `npm run dev`
-  @if($debug_mode){
+  @if $debug_mode {
     --DEBUG-FONT-TOKEN: '#{$style}';
   }
-  $path: 'font.#{$style}';
 
-  --line-height: #{get('#{$path}.line-height')}; // This --line-height is used for setting the default icon size
-  font-size: get('#{$path}.font-size');
-  font-weight: get('#{$path}.font-weight');
+  $-path: 'font.#{$style}';
+
+  --line-height: #{get('#{$-path}.line-height')}; // This --line-height is used for setting the default icon size
+  font-size: get('#{$-path}.font-size');
+  font-weight: get('#{$-path}.font-weight');
   line-height: var(--line-height);
 
-  @if get-check('#{$path}.breakpoint_m'){
+  @if get-check('#{$-path}.breakpoint_m') {
     @include breakpoint($breakpoint-m) {
-      --line-height: #{get('#{$path}.breakpoint_m.line-height')};
-      font-size: get('#{$path}.breakpoint_m.font-size');
-      font-weight: get('#{$path}.breakpoint_m.font-weight');
+      --line-height: #{get('#{$-path}.breakpoint_m.line-height')};
+      font-size: get('#{$-path}.breakpoint_m.font-size');
+      font-weight: get('#{$-path}.breakpoint_m.font-weight');
     }
   }
-  @if get-check('#{$path}.breakpoint_l'){
+
+  @if get-check('#{$-path}.breakpoint_l') {
     @include breakpoint($breakpoint-l) {
-      --line-height: #{get('#{$path}.breakpoint_l.line-height')};
-      font-size: get('#{$path}.breakpoint_l.font-size');
-      font-weight: get('#{$path}.breakpoint_l.font-weight');
+      --line-height: #{get('#{$-path}.breakpoint_l.line-height')};
+      font-size: get('#{$-path}.breakpoint_l.font-size');
+      font-weight: get('#{$-path}.breakpoint_l.font-weight');
     }
   }
 }
