--- a/src/scss/03_generic/_normalise.scss
+++ b/src/scss/03_generic/_normalise.scss
@@ -1,3 +1,8 @@
+// stylelint-disable string-quotes
+// stylelint-disable font-family-no-duplicate-names
+// stylelint-disable order/properties-alphabetical-order
+// stylelint-disable property-no-vendor-prefix
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
