--- a/src/scss/06_components/layout/_container.scss
+++ b/src/scss/06_components/layout/_container.scss
@@ -1,6 +1,6 @@
 .container {
-  @include components-container-max-width();
-  @include component-side-padding();
+  @include components-container-max-width;
+  @include component-side-padding;
   margin-left: auto;
   margin-right: auto;
 }
