--- a/src/scss/06_components/layout/_footer.scss
+++ b/src/scss/06_components/layout/_footer.scss
@@ -28,8 +28,8 @@
 }
 
 .footer-top {
-  @include components-container-max-width();
-  @include component-side-padding();
+  @include components-container-max-width;
+  @include component-side-padding;
   margin-left: auto;
   margin-right: auto;
   padding-top: $spacing-quadruple;
@@ -133,7 +133,7 @@
     display: flex;
 
     &::after {
-      content: "";
+      content: '';
       display: block;
       height: 15px;
       margin: 0 $spacing-half;
@@ -178,7 +178,7 @@
   &:after {
     --size: 100%;
     border: var(--outline-width) solid transparent;
-    content: "";
+    content: '';
     height: var(--size);
     position: absolute;
     right: calc(50% + var(--outline-width)); // Move the outline left to nullify the space around the icon.
@@ -201,12 +201,13 @@
 }
 
 .footer__back-to-top .hel-icon {
-  @include hover-link-arrow-transition();
+  @include hover-link-arrow-transition;
 }
 
 .footer__back-to-top:focus .hel-icon,
 .footer__back-to-top:hover .hel-icon {
   transform: translateY(-#{$spacing-quarter});
+
   @media (prefers-reduced-motion) {
     transform: none;
   }
