--- a/src/scss/06_components/media/_image.scss
+++ b/src/scss/06_components/media/_image.scss
@@ -4,8 +4,8 @@
   }
 
   img {
-    @include image-defaults();
-    @include loading-image-background();
+    @include image-defaults;
+    @include loading-image-background;
   }
 }
 
