--- a/src/scss/06_components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/06_components/navigation/_header-bottom-navigation.scss
@@ -53,7 +53,7 @@
   }
 
   .menu__toggle-button-icon {
-    @include rotating-icon-transition();
+    @include rotating-icon-transition;
   }
 
   // Icon rotates around
@@ -67,31 +67,31 @@
     text-decoration: none;
   }
 
- .menu__link-wrapper {
+  .menu__link-wrapper {
     align-items: center;
     display: block;
     height: 100%;
     position: relative;
   }
 
- .menu__link {
+  .menu__link {
     display: inline-block;
     padding: $spacing-and-half 0;
 
     &::before {
       background-color: $color-black;
       bottom: 0;
-      content: "";
+      content: '';
       height: 0;
       left: 0;
       margin: 0 auto;
       position: absolute;
       right: 0;
-      transition: all .5s cubic-bezier(.19,1,.22,1);
+      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
       width: 0;
     }
 
-    &[aria-current="page"]::before {
+    &[aria-current='page']::before {
       height: 4px;
       width: 100%;
     }
@@ -101,7 +101,7 @@
 
       &::after {
         box-shadow: 0 0 0 3px $color-black;
-        content: "";
+        content: '';
         display: block;
         height: 50%;
         left: -#{$spacing-quarter};
@@ -115,7 +115,7 @@
 
   // Handle menu link focus style when it has children
   .menu__item--item-below .menu__link:focus::after {
-      width: calc(100% - #{24px + 4px}) ; // Width of the dropdown button and padding.
+    width: calc(100% - #{24px + 4px}); // Width of the dropdown button and padding.
   }
 
   // Active trail items, first level
@@ -182,12 +182,12 @@
       }
     }
 
-    &[aria-current="page"] {
+    &[aria-current='page'] {
       font-weight: $font-weight-bold;
     }
 
     &:hover,
-    &[aria-current="page"],
+    &[aria-current='page'],
     &.menu__link--active-trail {
       &::before {
         height: 100%;
