--- a/src/scss/06_components/navigation/_header-top-navigation.scss
+++ b/src/scss/06_components/navigation/_header-top-navigation.scss
@@ -27,12 +27,12 @@
   }
 
   .link-to-site-frontpage {
-    @include navigation_link_defaults();
+    @include navigation_link_defaults;
   }
-
 
   .menu__link__text::after {
     --external-icon-move: translate(1px, -1px);
+
     @media (prefers-reduced-motion) {
       --external-icon-move: scale(1);
     }
