--- a/src/scss/06_components/navigation/_local-tasks.scss
+++ b/src/scss/06_components/navigation/_local-tasks.scss
@@ -44,13 +44,13 @@
     &::after {
       background-color: $color-black;
       bottom: 0;
-      content: "";
+      content: '';
       height: 0;
       left: 0;
       margin: 0 auto;
       position: absolute;
       right: 0;
-      transition: all .5s cubic-bezier(.19,1,.22,1);
+      transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
       width: 0;
     }
 
