--- a/src/scss/06_components/navigation/_sidebar-menu.scss
+++ b/src/scss/06_components/navigation/_sidebar-menu.scss
@@ -16,15 +16,16 @@
     padding-bottom: $spacing-and-half;
 
     a {
-      @include navigation_link_defaults();
+      @include navigation_link_defaults;
       display: flex;
       padding-left: 20px + $spacing; // Width of the arrow icon.
       position: relative;
 
       &:before {
         @include pseudo-icon('arrow-left', 25px, $color-black, flex);
-        @include hover-link-arrow-transition();
-        //TODO: Clean up this size mess
+        @include hover-link-arrow-transition;
+
+        // TODO: Clean up this size mess
         height: 30px;
         left: 0;
         position: absolute;
@@ -35,16 +36,18 @@
       &:focus::before,
       &:hover::before {
         transform: translateX(-$spacing-quarter);
+
         @media (prefers-reduced-motion) {
           transform: none;
         }
       }
+
       &:focus {
         outline: none;
 
         &::after {
           box-shadow: 0 0 0 3px $color-black;
-          content: "";
+          content: '';
           display: block;
           height: 150%;
           left: -$spacing-half;
@@ -89,7 +92,7 @@
 
           &::before {
             box-shadow: 0 0 0 3px $color-black;
-            content: "";
+            content: '';
             display: block;
             height: calc(100% - #{$spacing});
             left: -#{$spacing-half};
@@ -143,9 +146,9 @@
           position: relative;
           width: 100%;
 
-          &[aria-current="page"]::before {
+          &[aria-current='page']::before {
             background-color: $color-black;
-            content: "";
+            content: '';
             height: 100%; // Line-height
             left: 0;
             position: absolute;
@@ -157,7 +160,7 @@
           &:focus {
             &::before {
               box-shadow: 0 0 0 3px $color-black;
-              content: "";
+              content: '';
               display: block;
               height: 100%;
               left: 0;
@@ -182,7 +185,7 @@
     position: relative;
 
     .hel-icon {
-      @include rotating-icon-transition();
+      @include rotating-icon-transition;
     }
 
     &:hover {
@@ -194,7 +197,7 @@
 
       &::after {
         box-shadow: 0 0 0 3px $color-black;
-        content: "";
+        content: '';
         display: block;
         height: calc(100% - #{$spacing});
         left: 0;
