--- a/src/scss/06_components/pages/_cookie-compliance.scss
+++ b/src/scss/06_components/pages/_cookie-compliance.scss
@@ -1,6 +1,6 @@
 .cookie-compliance--lead-in__container {
-  @include components-container-max-width();
-  @include component-side-padding();
+  @include components-container-max-width;
+  @include component-side-padding;
   padding-top: 0;
 
   h1 {
@@ -33,6 +33,7 @@
 
     .hds-checkbox__label {
       @include font('lead');
+
       // Icon size + spacing.
       display: block;
       padding-left: calc(var(--size) + #{$spacing});
@@ -108,6 +109,7 @@
 
     h2 {
       margin-top: 0;
+
       @include font('h4');
     }
 
@@ -122,7 +124,7 @@
     }
 
     .hds-button {
-      @include hds-button-colors-on-light-bg();
+      @include hds-button-colors-on-light-bg;
     }
 
     .hds-button {
@@ -140,6 +142,7 @@
       }
     }
   }
+
   .layout-main-wrapper &:last-child .message {
     margin-bottom: 80px;
   }
@@ -153,9 +156,8 @@
   .message {
     background-color: $color-black;
 
-
     .hds-button {
-      @include hds-button-colors-on-dark-bg();
+      @include hds-button-colors-on-dark-bg;
     }
   }
 }
