--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -59,7 +59,7 @@
     }
 
     // Move language checkbox to a new row and set proper margin
-    [data-drupal-selector="edit-provided-languages-value"] {
+    [data-drupal-selector='edit-provided-languages-value'] {
       margin-top: $spacing-and-half;
       order: 1;
     }
@@ -150,9 +150,9 @@
 }
 
 .unit-search__result--map {
-  padding-bottom:52%;
+  padding-bottom: 52%;
   position: relative;
-  width:100%;
+  width: 100%;
 }
 
 .unit-search__map {
