--- a/src/scss/06_components/layout/_layout.scss
+++ b/src/scss/06_components/layout/_layout.scss
@@ -18,6 +18,7 @@ $-sidebar-width: 340px;
     'subnav'
     'content'
     'sidebar';
+  grid-template-columns: 100%;
   grid-template-rows: auto;
   margin-left: auto;
   margin-right: auto;
