UHF-2976: Move hiding of subnav on mobile to layout from sidebar-menu to hide extra margins

--- a/src/scss/06_components/layout/_layout.scss
+++ b/src/scss/06_components/layout/_layout.scss
@@ -55,10 +55,13 @@ $-sidebar-width: 340px;
 }
 
 .layout-sidebar-first {
+  display: none;
   grid-area: subnav;
   margin-bottom: $spacing-triple;
 
   @include breakpoint($breakpoint-l) {
+    display: block;
+
     .no-sidebar-second & {
       margin-bottom: 0;
     }
