UHF-2976: Fixed double page titles on customised page.html.twig templates.

--- a/templates/layout/page--user--password.html.twig
+++ b/templates/layout/page--user--password.html.twig
@@ -2,7 +2,7 @@
   {% block page_content %}
     {% embed '@hdbt/misc/container.twig' with {container_element: 'user-login-page-content'} %}
       {% block container_content %}
-        {{ page.content }}
+        {{ page.content|without(page_title_block) }}
       {% endblock container_content %}
     {% endembed %}
   {% endblock page_content %}
