UHF-5573: Add support for news-teaser-generic to support classes as array, added missing class for news item teaser

--- a/templates/module/helfi-news-item/news-teaser-generic.twig
+++ b/templates/module/helfi-news-item/news-teaser-generic.twig
@@ -1,4 +1,4 @@
-<div class="news-listing__content {{ class }}">
+<div{{ attributes.addClass('news-listing__content', class) }}">
   {# Short title or Title #}
   <{{ heading_level }} class="news-listing__title">
     {% set link_attributes = {
