--- a/src/scss/06_components/layout/_component.scss
+++ b/src/scss/06_components/layout/_component.scss
@@ -1,6 +1,7 @@
 // Margins between components
 * ~ .components,
-.unit__services + .component, // unit page accessibility sentences accordion needs this
+.service__units + .component, // TODO: .service__units should be stripped from extra wrapping divs, so that .component element would be sibling to other components. service page margins were broken otherwise
+.unit__services + .component, // TODO: same as above for unit page where accessibility sentences accordion needs this
 .component ~ .component {
   @include component-margin-top;
 }
