UHF-5664: Add styles for popular services paragraphs

--- a/src/scss/06_components/paragraphs/__index.scss
+++ b/src/scss/06_components/paragraphs/__index.scss
@@ -12,6 +12,8 @@
 @import 'liftup-with-image';
 @import 'list-of-links';
 @import 'map';
+@import 'popular-service-item';
+@import 'popular-services';
 @import 'remote-video';
 @import 'service-list';
 @import 'sidebar-text';
