UHF-5666: Fix overly agressive link tag stripping

--- a/templates/module/helfi_api_base/helfi-link.html.twig
+++ b/templates/module/helfi_api_base/helfi-link.html.twig
@@ -16,6 +16,6 @@
     {% endif %}
   {% endif %}
 
-  {{ selected_icon }}{{ title|render|striptags|trim }}{{ attribute_icon }}
+  {{ selected_icon }}{{ title }}{{ attribute_icon }}
 
 {% endspaceless %}
