UHF-5662: Added styles for hero with search

--- a/src/scss/06_components/paragraphs/_hero.scss
+++ b/src/scss/06_components/paragraphs/_hero.scss
@@ -507,7 +507,8 @@ $koro-height: 50px;
   }
 }
 
-.hero--diagonal {
+.hero--diagonal,
+.hero--with-search {
   @include breakpoint($breakpoint-l) {
     position: relative;
   }
