--- a/templates/block/block--eucookiecomplianceblock.html.twig
+++ b/templates/block/block--eucookiecomplianceblock.html.twig
@@ -1,3 +1,4 @@
+
 {#
 /**
  * @file
@@ -12,7 +13,7 @@
 #}
 
 {% if content %}
-  <div class="layout-content components components--cookie-compliance-block">
+  <div class="layout-content enriched-content components components--cookie-compliance-block">
 
   {% embed "@hdbt/misc/component.twig" with
     {
