UHF-2939: UHF-2939 Added workaround for the issue that accordion icons remain open on firefox

--- a/src/scss/06_components/paragraphs/_accordion.scss
+++ b/src/scss/06_components/paragraphs/_accordion.scss
@@ -14,8 +14,8 @@
     margin: 0;
     padding: 0;
 
-    // Accordion open state.
-    &.handorgel__header--open .accordion-item__button--toggle {
+    // Accordion open and opened state.
+    &.handorgel__header--opened .accordion-item__button--toggle {
       background-color: transparent;
 
       &::after {
