UHF-5699: Add comment

--- a/src/scss/06_components/paragraphs/_event-list.scss
+++ b/src/scss/06_components/paragraphs/_event-list.scss
@@ -53,6 +53,8 @@ $tag-vertical-padding: 5px;
   display: block;
   inset: 0;
   position: absolute;
+
+  // Set z-index to make arrow icon clickable as well.
   z-index: 1;
 }
 
